# dalibo--pg_activity

./: acceptance.md  goal.md  log_parser.py  progress.md  pyproject.toml  pytest.ini  run_test.sh  todo.md
pgactivity/: cli.py  colors.py  compat.py  pg.py  ui.py  views.py  widgets.py
pgactivity/profiles/: minimal.conf  narrow.conf  wide.conf
pgactivity/queries/: disable_log_min_duration_sample.sql  disable_log_min_duration_statement.sql  disable_log_statement.sql  do_pg_cancel_backend.sql  do_pg_terminate_backend.sql  get_blocking_oldest.sql  get_blocking_post_090200.sql  get_blocking_post_090600.sql  get_data_directory.sql  get_pg_activity_oldest.sql  get_pg_activity_post_090200.sql  get_pg_activity_post_090600.sql  get_pg_activity_post_100000.sql  get_pg_activity_post_110000.sql  get_pg_activity_post_130000.sql  get_pga_inet_addresses.sql  get_replication_slots_post_140000.sql  get_server_info_oldest.sql  get_server_info_post_090000.sql  get_server_info_post_090200.sql  get_server_info_post_090400.sql  get_server_info_post_090600.sql  get_server_info_post_100000.sql  get_server_info_post_110000.sql  get_temporary_files_oldest.sql  get_temporary_files_post_090100.sql  get_temporary_files_post_120000.sql  get_version.sql  get_waiting_oldest.sql  get_waiting_post_090200.sql  get_wal_receivers_post_090600.sql  (+1 more)
pgmonitor/: __init__.py  activities.py  config.py  data.py  keys.py  main.py  types.py  utils.py  views.py
tests/: __init__.py  test_activities.py  test_config.py  test_data.py  test_keys.py  test_main.py  test_types.py  test_utils.py  test_views.py
